Adds fetching location info data and updating database
